<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CGMConcept</string>
    <string name="action_settings">Settings</string>
    <string name="inlet">INLET</string>
    <string name="outlet">OUTLET</string>
    <string name="n_of_dies">N. of DIES</string>
    <string name="carbon_content">CARBON CONTENT</string>
    <string name="type_of_wire">TYPE OF WIRE</string>
    <string name="target_speed">TARGET SPEED</string>
    <string name="speed_wire_inlet">SPEED WIRE INLET</string>
    <string name="confirm">Confirm</string>
    <string name="calculate">Calculate</string>
    <string name="constant">Constant</string>
    <string name="optimized">Optimized</string>
    <string name="average_reduction">AVERAGE REDUCTION</string>
    <string name="total_reduction">TOTAL REDUCTION</string>
    <string name="inlet_ts">INLET T/S</string>
    <string name="outlet_ts">OUTLET T/S</string>
    <string name="constant_power">Constant Power</string>
    <string name="constant_reduction">Constant Reduction</string>
    <string name="numberRange">Please enter a number between 1 and 10</string>
    <string name="dieschedule">DIE SCHEDULE</string>
    <string name="openchart">Draw Charts</string>
    
    
    
    
    <string-array name="carbon_content_array">
        <item>0.10</item>
        <item>0.15</item>
        <item>0.20</item>
        <item>0.25</item>
        <item>0.30</item>
        <item>0.35</item>
        <item>0.40</item>
        <item>0.45</item>
        <item>0.50</item>
        <item>0.55</item>
        <item>0.60</item>
        <item>0.65</item>
        <item>0.70</item>
        <item>0.75</item>
        <item>0.80</item>
        <item>0.85</item>
        <item>0.90</item>
        <item>0.95</item>
        <item>1.00</item>
        <item>1.10</item>
    </string-array>
    
    <string-array name="carbon_inletts">
        <item>392.4</item>
        <item>441.45</item>
        <item>490.50</item>
        <item>539.55</item>
        <item>588.60</item>
        <item>647.46</item>
        <item>706.32</item>
        <item>765.18</item>
        <item>833.85</item>
        <item>892.71</item>
        <item>951.57</item>
        <item>1010.43</item>
        <item>1069.29</item>
        <item>1128.15</item>
        <item>1177.20</item>
        <item>1226.25</item>
        <item>1275.30</item>
        <item>1324.35</item>
        <item>1373.40</item>
        <item>1471.50</item>
    </string-array>
    
    <string-array name="carbon_outletts">
        <item>907.768538318346</item>
        <item>936.096010901630</item>
        <item>1126.840963903750</item>
        <item>1220.228465847890</item>
        <item>1312.707915996460</item>
        <item>1391.399695382340</item>
        <item>1459.719065540770</item>
        <item>1552.229876131550</item>
        <item>1647.986723597560</item>
        <item>1750.400117351560</item>
        <item>1832.650138730360</item>
        <item>1931.252778332090</item>
        <item>2029.616217057640</item>
        <item>2120.186201970900</item>
        <item>2203.193699181060</item>
        <item>2274.301083820820</item>
        <item>2338.658321615020</item>
        <item>2420.481264571750</item>
        <item>2498.445182099090</item>
        <item>2673.451591154970</item>
    </string-array>
    
</resources>