<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="3dp"
    android:orientation="vertical"
    android:useDefaultMargins="true" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/dieschedule"
        android:textSize="25sp"
        android:textStyle="bold" 
        android:background="@color/Red"
        android:padding="10dp"
        android:gravity="center"
        />

    <LinearLayout style="@style/form_layout" >

        <TextView
            style="@style/inputLabel"
            android:text="@string/inlet" />

        <EditText
            android:id="@+id/txtinlet"
            style="@style/inputNumbers"
            android:inputType="numberDecimal"
            android:text="6.50" />

        <TextView
            style="@style/measure"
            android:text="mm" />
    </LinearLayout>

    <LinearLayout style="@style/form_layout" >

        <TextView
            style="@style/inputLabel"
            android:text="@string/outlet" />

        <EditText
            android:id="@+id/txtoutlet"
            style="@style/inputNumbers"
            android:inputType="numberDecimal"
            android:text="2.0" />

        <TextView
            style="@style/measure"
            android:text="mm" />
    </LinearLayout>

    <LinearLayout style="@style/form_layout" >

        <TextView
            style="@style/inputLabel"
            android:text="@string/n_of_dies" />

        <Spinner
            android:id="@+id/n_of_dies"
            style="@style/inputNumbers" />

        <TextView
            style="@style/measure"
            android:text="N°" />
    </LinearLayout>

    <LinearLayout style="@style/form_layout" >

        <TextView
            style="@style/inputLabel"
            android:text="@string/carbon_content" />

        <Spinner
            android:id="@+id/carbon_content"
            style="@style/inputNumbers" />

        <TextView
            style="@style/measure"
            android:text="#" />
    </LinearLayout>

    <LinearLayout style="@style/form_layout" >

        <TextView
            style="@style/inputLabel"
            android:text="@string/target_speed" />

        <EditText
            android:id="@+id/txttargetspeed"
            style="@style/inputNumbers"
            android:inputType="numberDecimal"
            android:text="10" />

        <TextView
            style="@style/measure"
            android:text="m/s" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/confirm" />

</LinearLayout>