<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"

        android:columnCount="3">
          <TextView
                style="@style/inputLabel"
                android:text="@string/inlet" />

            <EditText
                android:id="@+id/txtinlet"
                style="@style/inputNumbers" />

            <TextView
                style="@style/measure"
                android:text="mm" />

            <TextView
                style="@style/inputLabel"
                android:text="@string/outlet" />

            <EditText
                android:id="@+id/txtoutlet"
                style="@style/inputNumbers" />

            <TextView
                style="@style/measure"
                android:text="mm" />

            <TextView
                style="@style/inputLabel"
                android:text="@string/n_of_blocks" />

            <EditText
                android:id="@+id/txtnofblocks"
                style="@style/inputNumbers"
                android:hint="Max 10 blocks" />

            <TextView
                style="@style/measure"
                android:text="N°" />

           <TextView
                style="@style/inputLabel"
                android:text="@string/type_of_wire" 
            />
            <Spinner
                android:id="@+id/typeofwire"
                style="@style/inputNumbers" />

            <TextView
                style="@style/measure"
                android:text="#" />


            <TextView
                style="@style/inputLabel"
                android:text="@string/target_speed" 
               />

            <EditText
                android:id="@+id/txttargetspeed"
                style="@style/inputNumbers" />

            <TextView
                style="@style/measure"
                android:text="m/s" />

      
            <View/>

           <Button
                    android:id="@+id/btnSubmit"
                    android:ems="5"
                    android:text="@string/confirm" />

            <View/>

</android.support.v7.widget.GridLayout>