<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="3dp"
    android:useDefaultMargins="true"
    app:columnCount="3"
    app:rowCount="7"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        app:layout_column="0"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        app:layout_row="0"
        android:gravity="center"
        android:text="@string/dieschedule"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- 1 ROW -->
    <LinearLayout
        style="@style/leftColumnLayout"
        app:layout_column="0"
        app:layout_row="1"
        android:orientation="vertical"
        app:layout_gravity="fill_horizontal"
        >

        <TextView
            style="@style/inputLabel"
            android:text="@string/inlet" 
            android:padding="0dp"
            android:gravity="bottom|right"
            />

        <TextView
            style="@style/measure"
            android:gravity="top|right"
            android:padding="0dp"
            android:text="mm" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtinlet"
        style="@style/inputNumbers"
        app:layout_column="1"
        app:layout_gravity="fill"
        app:layout_row="1"
        android:inputType="numberDecimal"
        android:text="6.5" />

    <!-- 2 ROW  -->
    <LinearLayout 
        style="@style/leftColumnLayout"
        app:layout_column="0"
        app:layout_row="2"
        android:orientation="vertical"
        app:layout_gravity="fill_horizontal"
        >
      <TextView
         style="@style/inputLabel"
         android:text="@string/outlet"
         />
      <TextView
         style="@style/measure"
         android:text="mm"
         />
    
    </LinearLayout>
            
     <EditText
         app:layout_column="1"
         app:layout_row="2"
         app:layout_gravity="fill"
         android:id="@+id/txtoutlet"
         android:inputType="numberDecimal"
         style="@style/inputNumbers"
         android:text="2.0"
         /> 
         
     <!-- 3 ROW -->
    <LinearLayout 
         style="@style/leftColumnLayout"
         app:layout_column="0"
         app:layout_row="3"
         android:orientation="vertical"
         app:layout_gravity="fill_horizontal"
         >
           
    <TextView
         style="@style/inputLabel"
         android:text="@string/n_of_dies"/>
            
    <TextView
         style="@style/measure"
         android:text="N°"/>

    </LinearLayout>

     <Spinner
         app:layout_column="1"
         app:layout_row="3"
         android:id="@+id/n_of_dies"
         style="@style/inputNumbers"
         app:layout_gravity="fill"/>
     
     <!-- 4 ROW -->
     
      <LinearLayout 
         style="@style/leftColumnLayout"
         app:layout_column="0"
         app:layout_row="4"
         android:orientation="vertical"
         app:layout_gravity="fill_horizontal"
         >
      
      <TextView
               style="@style/inputLabel"
               android:text="@string/carbon_content" />
     
       <TextView
                style="@style/measure"
                android:text="#" 
                />
      </LinearLayout>
      
      <Spinner
          app:layout_column="1"
          app:layout_row="4"
          app:layout_gravity="fill"
          android:id="@+id/carbon_content"
          style="@style/inputNumbers" 
          android:layout_width="wrap_content"
       />
           
    <!-- 5 ROW -->
    <LinearLayout 
         style="@style/leftColumnLayout"
         app:layout_column="0"
         app:layout_row="5"
         android:orientation="vertical"
         app:layout_gravity="fill_horizontal"
         >
       
         <TextView
                style="@style/inputLabel"
                android:text="@string/target_speed"
               />
       
        <TextView
                style="@style/measure"
                android:text="m/s" 
                />
        
    </LinearLayout>
   
            <EditText
                app:layout_column="1"
                app:layout_row="5"
                app:layout_gravity="fill"
                android:id="@+id/txttargetspeed"
                android:inputType="numberDecimal"
                android:text="10"
                style="@style/inputNumbers" />
            
            <Button
                    app:layout_column="1"
                    app:layout_row="6"
                    android:id="@+id/btnSubmit"
                    android:ems="5"
                    app:layout_gravity="fill_horizontal"
                    android:text="@string/confirm" />

            

</android.support.v7.widget.GridLayout>